GRADLE-1355 - Move integration tests out of core project and into their own integTest project.